reviews and schedules endpoints created. reference in drive or swagger file.
