# Oiika-Api-Server/api/controllers/schedules.js
@@ -3,6 +3,7 @@ const scheduleModel = app.models.scheduleModel;
 const valid = require('../helpers/validations');
 const error = require('../helpers/errors');
 
+
 const Promise = require('bluebird');
 // const mongoose = require('mongoose');
 const _ = require('underscore');
@@ -13,7 +14,7 @@ module.exports = {
 	createBlankSchedule: createBlankSchedule
 };
 
-// TODO: create schedule function
+// create schedule function
 function createBlankSchedule(accountId, tutorId){
 
 	return new Promise(function(resolve, reject) {
@@ -23,13 +24,13 @@ function createBlankSchedule(accountId, tutorId){
 			tutor_id: tutorId,
 			account_id: accountId,
 			schedule: {
-				monday: -1,
-				tuesday: -1,
-				wednesday: -1,
-				thursday: -1,
-				friday: -1,
-				saturday: -1,
-				sunday: -1
+				"0": "-1",
+				"1": "-1",
+				"2": "-1",
+				"3": "-1",
+				"4": "-1",
+				"5": "-1",
+				"6": "-1"
 	      	}
 	    // throw errors as necessary
 		}, function(err, result) {
@@ -92,6 +93,53 @@ function getTutorScheduleByAccountId(accountId){
 	});
 };
 
-// TODO: update schedule by account id
-function updateSchedule(accountId){
+// update schedule by account id
+function updateSchedule(schedule){
+
+	return new Promise(function(resolve, reject) {
+
+		scheduleModel.findOneAndUpdate(
+		{
+			account_id: schedule.accountId
+		},
+		// set the old schedule as the new schedule
+		// beware - validation only done by swagger using the swagger.yaml definitions for this endpoint.
+		{
+			$set: {
+				schedule: schedule.schedule
+			}
+		},
+		// this will return updated document rather than old one
+		{ new : true },
+		function(err, resultDocument) {
+
+			console.log(resultDocument);
+			if(err) {
+				switch (err.name){
+					case "CastError":
+					case "MongoError":
+						error.makeError(err.name, err.message)
+						.then(function(error){
+							reject(error);
+						});
+						break;
+					default:
+						error.makeMongooseError(err)
+						.then(function(error){
+							reject(error);
+						});
+						break;
+				}
+			} else if (!resultDocument){
+				error.makeError("INVALID_ID", "ID does not exist.")
+				.then(function(error){
+					reject(error);
+				});
+			} else {
+				resolve(resultDocument);
+			}
+
+		});
+
+	});
 };
